--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,10 +8,19 @@ on:
 jobs:
   integration-tests:
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Set up Node.js (if needed, for additional testing)
+      uses: actions/setup-node@v2
+      with:
+        node-version: '20'  # Adjust as needed
+
+    - name: Install curl
+      run: sudo apt-get install -y curl
+
     - name: Run Integration Tests
       run: ./integration_test.sh
+
