--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,23 +4,26 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  integration-tests:
+  build:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Node.js (if needed, for additional testing)
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20'  # Adjust as needed
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'  # Specify Node.js version 20
 
-    - name: Install curl
-      run: sudo apt-get install -y curl
+      - name: Install dependencies
+        run: npm install
 
-    - name: Run Integration Tests
-      run: ./integration_test.sh
+      - name: Run integration tests
+        run: npm test  # Replace with your actual test command
 
