--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'  # Specify Node.js version 20
+#      - name: Set up Node.js
+#        uses: actions/setup-node@v4
+#        with:
+#          node-version: '20'  # Specify Node.js version 20
 
 #      - name: Install dependencies
 #        run: npm install
@@ -27,5 +27,8 @@ jobs:
 #      - name: Run integration tests
 #        run: npm integration_test  # Replace with your actual test command
 
-      - name: Run integration tests
-        run: integration_test
+      - name: Make integration_test.sh executable
+        run: chmod +x ./integration_test.sh  # Make the script executable
+
+      - name: Run integration test
+        run: ./integration_test.sh  # Execute the integration test script
